# clyan

./: .gitignore  README.md  check_free.py  clean_edge.py  clean_items.json  clean_preview.py  clean_safe.py  deep_eval.py  fix_bs3.py  fix_cli.py  fix_i2.py  fix_winapp2_cats.py  mcp.example.json  pyproject.toml  requirements.txt  scan_c_full.bat  test_all_scans.py  test_clean.py  test_p2p3.py  test_relimport.py  track_gap.py  winapp2.ini
clyan/: cli.py  learning.py  mcp_server.py  reclaim.py  reflex.py  report.py
clyan/clean/: execute.py  preview.py
clyan/core/: config.py  history.py  report.py
clyan/importers/: winapp2.py
clyan/scan/: browser_cache.py  browser_deep.py  dev_garbage.py  disk_summary.py  drill.py  duplicates.py  fast_scanner.py  large_files.py  node_waste.py  packages.py  pipeline.py  space.py  system.py
clyan/scan/providers/: __init__.py  app_caches.py  build.py  dism_cleanup.py  empty_dirs.py  gpu_caches.py  ide.py  maven.py  misc.py  node.py  npm_deep.py  npm_prune.py  pip_deep.py  python_prov.py  rust_prov.py  small_files.py  unknown_caches.py  vm_caches.py  win_deep.py  winapp2_prov.py  windows_extra.py  windows_installer.py  windows_logs.py  windows_system.py
clyan/tests/: test_confidence.py  test_core.py  test_impact.py  test_report.py
clyan/utils/: confidence.py  dirtree.py  garbage_rules.py  impact.py  paths.py  scanner_base.py  size.py  staleness.py  system_drive.py  tracker.py
docs/: api.md  architecture.md  demo.md  providers.md  safety.md
